--- a/style/app.scss
+++ b/style/app.scss
@@ -96,12 +96,20 @@ h3.ant-list-item-meta-title {
     background: #F9F9F9;
 }
 
+.master.ant-layout-content {
+    padding: 64px 50px;
+}
+
 @media only screen and (max-width: 767px) {
     .ant-drawer-content-wrapper {
         max-width: 85%;
     }
     .ant-menu {
         max-width: 50px;
+    }
+    .master.ant-layout-content,
+    .ant-layout-header {
+        padding: 0 16px!important;
     }
 }
 
@@ -111,6 +119,17 @@ h3.ant-list-item-meta-title {
 
 .ant-comment {
     .ant-row {
+        width: 100%;
+    }
+}
+
+.ant-menu-item {
+    text-transform: uppercase;
+    font-weight: bold;
+}
+
+.featured {
+    img {
         width: 100%;
     }
 }
