--- a/style/app.scss
+++ b/style/app.scss
@@ -193,3 +193,14 @@ h1 {
 .tags {
     line-height: 2;
 }
+
+.v-center {
+    display: flex;
+    align-items: center;
+}
+
+.tags.boxed {
+    margin: -16px;
+    padding: 5px 10px;
+    background: #F9F9F9;
+}
