--- a/style/app.scss
+++ b/style/app.scss
@@ -151,21 +151,6 @@ h3.ant-list-item-meta-title {
     padding: 64px 50px;
 }
 
-@media only screen and (max-width: 767px) {
-    .ant-drawer-content-wrapper {
-        max-width: 85%;
-    }
-    .ant-menu {
-        max-width: 50px;
-    }
-    .master.ant-layout-content {
-        padding: 64px 35px;
-    }
-    .ant-layout-header {
-        padding: 0 16px !important;
-    }
-}
-
 .ant-layout-content {
     min-height: calc(100vh - 70px);
 }
@@ -300,3 +285,50 @@ h1 {
     text-align: center;
 }
 
+.has-cover .ant-card-head-wrapper {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 74px;
+    background-image: linear-gradient(0deg, rgba(255, 255, 255, 0), rgba(0, 0, 0, 0.5));
+    padding: 16px;
+
+    .wrapper {
+        height: 100%;
+        display: flex;
+        flex-basis: c;
+        flex-direction: column;
+    }
+
+    .editable-cell,
+    .ant-card-head-title {
+        font-size: 24px;
+        flex: 1;
+    }
+
+    a {
+        color: #FFF;
+    }
+}
+
+@media only screen and (max-width: 767px) {
+    .ant-drawer-content-wrapper {
+        max-width: 85%;
+    }
+    .ant-menu {
+        max-width: 50px;
+    }
+    .master.ant-layout-content {
+        padding: 64px 16px;
+    }
+    .ant-layout-header {
+        padding: 0 16px !important;
+    }
+
+    .has-cover .ant-card-head-wrapper {
+        .ant-card-head-title {
+            font-size: 16px;
+        }
+    }
+}
