--- a/style/app.scss
+++ b/style/app.scss
@@ -91,9 +91,14 @@
     height: 100%;
 
     .wrapper {
-        background-image: linear-gradient(to left, #9bda81, #26b07a);
         height: 100%;
         min-height: 180px;
+        display: flex;
+        flex-direction: column;
+
+        .content {
+            flex: 1;
+        }
     }
 
     q, a {
@@ -226,7 +231,6 @@ h1 {
     align-items: center;
 }
 
-
 .topic-card {
     .ant-card-body {
         position: absolute;
@@ -297,7 +301,6 @@ h1 {
     .wrapper {
         height: 100%;
         display: flex;
-        flex-basis: c;
         flex-direction: column;
     }
 
@@ -309,6 +312,30 @@ h1 {
 
     a {
         color: #FFF;
+    }
+}
+
+.topics {
+    position: relative;
+
+    .next, .previous {
+        position: absolute;
+        top: calc(50% - 10px);
+        cursor: pointer;
+    }
+
+    .next {
+        right: -30px;
+    }
+
+    .previous {
+        left: -30px;
+    }
+}
+
+.vote-wrap {
+    .ant-btn {
+        border: 0;
     }
 }
 
@@ -325,10 +352,17 @@ h1 {
     .ant-layout-header {
         padding: 0 16px !important;
     }
-
     .has-cover .ant-card-head-wrapper {
         .ant-card-head-title {
             font-size: 16px;
         }
+    }
+
+    .topics .previous {
+        left: 0;
+    }
+
+    .topics .next {
+        right: 0;
     }
 }
