--- a/style/app.scss
+++ b/style/app.scss
@@ -374,3 +374,10 @@ h1 {
 .ant-pagination-item a {
     padding: 10px;
 }
+
+.delete {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    color: #FFF;
+}
